--- a/src/views/crud.ejs
+++ b/src/views/crud.ejs
@@ -36,11 +36,11 @@
                 <div class="form-row">
                     <div class="form-group col-6">
                       <label for="inputEmail4">First name</label>
-                      <input type="text" class="form-control" id="email" placeholder="Email" name="firstName">
+                      <input type="text" class="form-control" placeholder="Email" name="firstName">
                     </div>
                     <div class="form-group col-md-6">
                       <label for="inputPassword4">Last Name</label>
-                      <input type="text" class="form-control" name="password" placeholder="lastName">
+                      <input type="text" class="form-control" name="lastName" placeholder="lastName">
                     </div>
                   </div>
 
@@ -49,10 +49,11 @@
                   <label for="inputAddress">Address</label>
                   <input type="text" class="form-control" id="inputAddress" name = "address" placeholder="1234 Main St">
                 </div>
+
                 <div class="form-row">
                   <div class="form-group col-md-6">
                     <label for="inputCity">Phone Number</label>
-                    <input type="text" class="form-control" id="phoneNumber">
+                    <input type="text" class="form-control" id="phoneNumber" name = "phoneNumber">
                   </div>
                   <div class="form-group col-md-3">
                     <label for="inputState">Sex</label>
