--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1> Hello world from views</h1>
-    <p>Data haven deploy in render success</p>
+    <h2>Data haven deploy in render success</h2>
 </body>
 </html>
